clean import and some checkstyle
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>